--- a/curiosity.ipynb
+++ b/curiosity.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:22:28.858298Z",
-     "start_time": "2021-10-15T09:22:27.034614Z"
+     "end_time": "2021-10-15T11:50:44.971403Z",
+     "start_time": "2021-10-15T11:50:36.077452Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:22:28.865770Z",
-     "start_time": "2021-10-15T09:22:28.861529Z"
+     "end_time": "2021-10-15T11:50:44.979169Z",
+     "start_time": "2021-10-15T11:50:44.974998Z"
     }
    },
    "outputs": [],
@@ -60,8 +60,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:22:29.492361Z",
-     "start_time": "2021-10-15T09:22:28.869038Z"
+     "end_time": "2021-10-15T11:50:48.103866Z",
+     "start_time": "2021-10-15T11:50:44.982060Z"
     }
    },
    "outputs": [],
@@ -79,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:34.475641Z",
-     "start_time": "2021-10-15T09:22:29.494689Z"
+     "end_time": "2021-10-15T11:51:03.660178Z",
+     "start_time": "2021-10-15T11:50:48.106672Z"
     }
    },
    "outputs": [
@@ -91,36 +91,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/gym/logger.py:34: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
-      "  warnings.warn(colorize(\"%s: %s\" % (\"WARN\", msg % args), \"yellow\"))\n"
+      "/home/mohit/anaconda3/envs/ITU/lib/python3.6/site-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
      ]
     }
    ],
    "source": [
     "reward_type = 'test'    # 'test' or 'train'\n",
-    "epi = [0,499] #[start,end] \n",
-    "epi_val = [500,699]\n",
+    "epi = [0,9] #[start,end] \n",
+    "epi_val = [500,505]\n",
     "\n",
     "gym_env_train = BeamSelectionEnv([0,0],reward_type)\n",
     "\n",
-    "gym_env_ind = list()\n",
-    "for i in range(epi[0],epi[1]+1):\n",
-    "    gym_env_ind.append(BeamSelectionEnv([i,i],reward_type))\n",
+    "# gym_env_ind = list()\n",
+    "# for i in range(epi[0],epi[1]+1):\n",
+    "#     gym_env_ind.append(BeamSelectionEnv([i,i],reward_type))\n",
     "    \n",
-    "gym_env_ind_val = list()\n",
-    "for i in range(epi_val[0],epi_val[1]+1):\n",
-    "    gym_env_ind_val.append(BeamSelectionEnv([i,i]))\n",
+    "# gym_env_ind_val = list()\n",
+    "# for i in range(epi_val[0],epi_val[1]+1):\n",
+    "#     gym_env_ind_val.append(BeamSelectionEnv([i,i]))\n",
     "\n",
     "# gym_env_val = BeamSelectionEnv(epi_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:35.729614Z",
-     "start_time": "2021-10-15T09:23:34.477953Z"
+     "end_time": "2021-10-15T11:51:12.463425Z",
+     "start_time": "2021-10-15T11:51:03.663672Z"
     }
    },
    "outputs": [],
@@ -139,11 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:35.736981Z",
-     "start_time": "2021-10-15T09:23:35.733189Z"
+     "end_time": "2021-10-15T11:51:12.473776Z",
+     "start_time": "2021-10-15T11:51:12.468360Z"
     }
    },
    "outputs": [],
@@ -162,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:35.847594Z",
-     "start_time": "2021-10-15T09:23:35.742027Z"
+     "end_time": "2021-10-15T11:51:12.625724Z",
+     "start_time": "2021-10-15T11:51:12.477747Z"
     }
    },
    "outputs": [],
@@ -195,11 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:35.999507Z",
-     "start_time": "2021-10-15T09:23:35.849735Z"
+     "end_time": "2021-10-15T11:51:12.734636Z",
+     "start_time": "2021-10-15T11:51:12.628473Z"
     }
    },
    "outputs": [],
@@ -218,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:36.097767Z",
-     "start_time": "2021-10-15T09:23:36.002086Z"
+     "end_time": "2021-10-15T11:51:12.832643Z",
+     "start_time": "2021-10-15T11:51:12.738232Z"
     }
    },
    "outputs": [],
@@ -233,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:36.197808Z",
-     "start_time": "2021-10-15T09:23:36.100324Z"
+     "end_time": "2021-10-15T11:51:13.035713Z",
+     "start_time": "2021-10-15T11:51:12.835160Z"
     }
    },
    "outputs": [],
@@ -248,11 +248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:36.295167Z",
-     "start_time": "2021-10-15T09:23:36.200627Z"
+     "end_time": "2021-10-15T11:51:13.118768Z",
+     "start_time": "2021-10-15T11:51:13.038089Z"
     }
    },
    "outputs": [],
@@ -268,11 +268,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:36.415902Z",
-     "start_time": "2021-10-15T09:23:36.297359Z"
+     "end_time": "2021-10-15T11:51:13.765659Z",
+     "start_time": "2021-10-15T11:51:13.120896Z"
     }
    },
    "outputs": [],
@@ -299,11 +299,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:36.516503Z",
-     "start_time": "2021-10-15T09:23:36.418300Z"
+     "end_time": "2021-10-15T11:51:13.774562Z",
+     "start_time": "2021-10-15T11:51:13.768363Z"
     }
    },
    "outputs": [],
@@ -320,11 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:36.616046Z",
-     "start_time": "2021-10-15T09:23:36.518892Z"
+     "end_time": "2021-10-15T11:51:13.883905Z",
+     "start_time": "2021-10-15T11:51:13.778595Z"
     }
    },
    "outputs": [],
@@ -351,11 +351,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:36.713730Z",
-     "start_time": "2021-10-15T09:23:36.618171Z"
+     "end_time": "2021-10-15T11:51:13.981814Z",
+     "start_time": "2021-10-15T11:51:13.886138Z"
     }
    },
    "outputs": [],
@@ -368,14 +368,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:36.816739Z",
-     "start_time": "2021-10-15T09:23:36.715966Z"
+     "end_time": "2021-10-15T11:51:14.085693Z",
+     "start_time": "2021-10-15T11:51:13.984384Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 1, 13)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = history.sample()\n",
     "np.array(a).shape"
@@ -383,11 +394,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:36.970991Z",
-     "start_time": "2021-10-15T09:23:36.819335Z"
+     "end_time": "2021-10-15T11:51:14.189839Z",
+     "start_time": "2021-10-15T11:51:14.088295Z"
     }
    },
    "outputs": [],
@@ -411,14 +422,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:38.895957Z",
-     "start_time": "2021-10-15T09:23:36.977180Z"
+     "end_time": "2021-10-15T11:51:21.308201Z",
+     "start_time": "2021-10-15T11:51:14.195897Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start to initailize observation normalization parameter.....\n",
+      "End to initalize...\n"
+     ]
+    }
+   ],
    "source": [
     "# normalize obs\n",
     "print('Start to initailize observation normalization parameter.....')\n",
@@ -439,11 +459,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:38.905136Z",
-     "start_time": "2021-10-15T09:23:38.899577Z"
+     "end_time": "2021-10-15T11:51:21.316680Z",
+     "start_time": "2021-10-15T11:51:21.311976Z"
     }
    },
    "outputs": [],
@@ -462,19 +482,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:39.023262Z",
-     "start_time": "2021-10-15T09:23:38.909097Z"
+     "end_time": "2021-10-15T11:51:21.418049Z",
+     "start_time": "2021-10-15T11:51:21.319372Z"
     },
-    "code_folding": [
-     2
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
-    "def val(gym_val:list):\n",
+    "def val(epi_val:list):\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        \n",
@@ -491,8 +509,8 @@
     "        states = np.zeros([1, BATCH_SIZE, 1,STATES_USED])\n",
     "        \n",
     "        ovr_val = 0\n",
-    "        for episode in tqdm.notebook.tqdm(range(len(gym_val)),desc='Val'):\n",
-    "            env = copy.deepcopy(gym_val[episode])\n",
+    "        for episode in tqdm.notebook.tqdm(range(epi_val[1]-epi_val[0]+1),desc='Val'):\n",
+    "            env =  BeamSelectionEnv([episode,episode])\n",
     "            rall=0\n",
     "            for steps in range(n_steps_epi_val[episode]):\n",
     "                \n",
@@ -526,11 +544,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:23:41.723581Z",
-     "start_time": "2021-10-15T09:23:39.026102Z"
+     "end_time": "2021-10-15T11:51:21.589198Z",
+     "start_time": "2021-10-15T11:51:21.420319Z"
     }
    },
    "outputs": [],
@@ -544,21 +562,86 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T09:26:29.279201Z",
-     "start_time": "2021-10-15T09:23:41.725874Z"
+     "start_time": "2021-10-15T11:50:36.188Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68af15e4e28e48a694fe5cf890e73666",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mohit/anaconda3/envs/ITU/lib/python3.6/site-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running avg for episode 500 is -0.1342210750719744\n",
+      "Running avg for episode 501 is -0.17180749778097004\n",
+      "Running avg for episode 502 is -0.16137250183976729\n",
+      "Running avg for episode 503 is -0.16057445180409696\n",
+      "Running avg for episode 504 is -0.14493263693064806\n",
+      "Running avg for episode 505 is -0.16904693231923346\n",
+      "Overall mean reward is -0.15566862693636863 \n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2bf95cbbaa3841efb094160c50574ed0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epi:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f34d79c851146358af62ba4815c9027",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/21 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "running_total_reward = 0\n",
     "\n",
-    "val(gym_env_ind_val)\n",
-    "for episode in tqdm.notebook.tqdm(range(len(gym_env_ind)),desc='Epi'):\n",
+    "val(epi_val)\n",
+    "for episode in tqdm.notebook.tqdm(range(epi[1]-epi[0]+1),desc='Epi'):\n",
     "    running_total_reward = 0\n",
     "    for global_step in tqdm.notebook.tqdm(range(0, n_steps_epi[episode], num_step), desc = 'Train'):\n",
     "        total_state, total_reward, total_done, total_next_state, total_action, total_int_reward, total_next_obs, total_values, total_policy =         [], [], [], [], [], [], [], [], []\n",
     "        global_update += 1\n",
-    "\n",
+    "        \n",
+    "        train_env =  BeamSelectionEnv([episode,episode],reward_type)\n",
+    "        \n",
     "        # Step 1. n-step rollout\n",
     "        for _ in range(num_step):\n",
     "            actions, value, policy = agent.get_action((states - obs_rms.mean) / np.sqrt(obs_rms.var)) #Normalization\n",
@@ -566,7 +649,7 @@
     "            next_states, rewards, dones, real_dones, log_rewards, next_obs = [], [], [], [], [], []\n",
     "\n",
     "            for action in actions:\n",
-    "                s, r, d, rd, lr = run(action,gym_env_ind[episode],history)\n",
+    "                s, r, d, rd, lr = run(action,train_env,history)\n",
     "                next_states.append(s)\n",
     "                rewards.append(r)\n",
     "                dones.append(d)\n",
@@ -665,7 +748,7 @@
     "    torch.save(agent.model.state_dict(), model_path)\n",
     "    torch.save(agent.icm.state_dict(), icm_path)\n",
     "\n",
-    "val(gym_env_ind_val)\n",
+    "val(epi_val)\n",
     "\n"
    ]
   },
@@ -696,8 +779,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.13"
   },
+  "notify_time": "5",
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
