Updated Eval for curiosity

--- a/curiosity_eval.ipynb
+++ b/curiosity_eval.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "74e7c7f8",
+   "id": "5fbcf47e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:14:09.025330Z",
-     "start_time": "2021-10-15T17:14:06.873356Z"
+     "end_time": "2021-10-15T18:39:16.063495Z",
+     "start_time": "2021-10-15T18:39:13.873135Z"
     }
    },
    "outputs": [],
@@ -29,6 +29,7 @@
     "from itertools import count\n",
     "import copy\n",
     "from torch.multiprocessing import Pipe\n",
+    "import pandas as pd\n",
     "\n",
     "import gym\n",
     "import caviar_tools\n",
@@ -45,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0cc6b87b",
+   "execution_count": 2,
+   "id": "407cc28f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:06.922918Z",
-     "start_time": "2021-10-15T17:14:45.612837Z"
+     "end_time": "2021-10-15T18:42:15.365579Z",
+     "start_time": "2021-10-15T18:39:16.067352Z"
     }
    },
    "outputs": [
@@ -64,7 +65,7 @@
     }
    ],
    "source": [
-    "epi_val = [500,500]\n",
+    "epi_val = [500,509]\n",
     "gym_env_ind_val = list()\n",
     "for i in range(epi_val[0],epi_val[1]+1):\n",
     "    gym_env_ind_val.append(BeamSelectionEnv([i,i]))\n",
@@ -79,12 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a13ccff6",
+   "execution_count": 3,
+   "id": "03d986b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:14.966311Z",
-     "start_time": "2021-10-15T17:15:14.956203Z"
+     "end_time": "2021-10-15T18:42:15.377025Z",
+     "start_time": "2021-10-15T18:42:15.368820Z"
     }
    },
    "outputs": [],
@@ -98,12 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b8a8b08a",
+   "execution_count": 4,
+   "id": "51c316d9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:15.709348Z",
-     "start_time": "2021-10-15T17:15:15.705640Z"
+     "end_time": "2021-10-15T18:42:15.692796Z",
+     "start_time": "2021-10-15T18:42:15.379933Z"
     }
    },
    "outputs": [],
@@ -115,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9dafc0c5",
+   "execution_count": 5,
+   "id": "830a3afc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:16.198339Z",
-     "start_time": "2021-10-15T17:15:16.195012Z"
+     "end_time": "2021-10-15T18:42:15.868128Z",
+     "start_time": "2021-10-15T18:42:15.697276Z"
     }
    },
    "outputs": [],
@@ -131,12 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4bbce45e",
+   "execution_count": 6,
+   "id": "0c8157d1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:16.669047Z",
-     "start_time": "2021-10-15T17:15:16.657426Z"
+     "end_time": "2021-10-15T18:42:16.100229Z",
+     "start_time": "2021-10-15T18:42:15.871575Z"
     }
    },
    "outputs": [],
@@ -159,18 +160,18 @@
     "\n",
     "pre_obs_norm_step = int(3000)#int(10000) Not much effect\n",
     "\n",
-    "HISTORY_SIZE = BATCH_SIZE*2\n",
+    "HISTORY_SIZE = BATCH_SIZE\n",
     "STATES_USED = 13"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "79326f50",
+   "execution_count": 7,
+   "id": "766f3c0e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:17.103477Z",
-     "start_time": "2021-10-15T17:15:17.099878Z"
+     "end_time": "2021-10-15T18:42:16.286831Z",
+     "start_time": "2021-10-15T18:42:16.104492Z"
     }
    },
    "outputs": [],
@@ -181,12 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "be3ba22d",
+   "execution_count": 8,
+   "id": "9a4371f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:17.518892Z",
-     "start_time": "2021-10-15T17:15:17.514876Z"
+     "end_time": "2021-10-15T18:42:16.485646Z",
+     "start_time": "2021-10-15T18:42:16.289556Z"
     }
    },
    "outputs": [],
@@ -197,12 +198,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e54e215c",
+   "execution_count": 9,
+   "id": "f31f6a76",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:17.988705Z",
-     "start_time": "2021-10-15T17:15:17.961680Z"
+     "end_time": "2021-10-15T18:42:16.671625Z",
+     "start_time": "2021-10-15T18:42:16.488183Z"
     }
    },
    "outputs": [],
@@ -231,12 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8ab87052",
+   "execution_count": 10,
+   "id": "fff44428",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:18.397033Z",
-     "start_time": "2021-10-15T17:15:18.393546Z"
+     "end_time": "2021-10-15T18:42:16.989388Z",
+     "start_time": "2021-10-15T18:42:16.674353Z"
     }
    },
    "outputs": [],
@@ -246,12 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0079e429",
+   "execution_count": 11,
+   "id": "6f51d1d6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:18.859359Z",
-     "start_time": "2021-10-15T17:15:18.842335Z"
+     "end_time": "2021-10-15T18:42:17.234189Z",
+     "start_time": "2021-10-15T18:42:16.991728Z"
     }
    },
    "outputs": [
@@ -261,7 +262,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,12 +274,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "af3543d2",
+   "execution_count": 12,
+   "id": "8d1585f2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:19.285795Z",
-     "start_time": "2021-10-15T17:15:19.274231Z"
+     "end_time": "2021-10-15T18:42:17.443101Z",
+     "start_time": "2021-10-15T18:42:17.237073Z"
     }
    },
    "outputs": [],
@@ -305,12 +306,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e98ff53c",
+   "execution_count": 13,
+   "id": "a3110e2f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:19.710804Z",
-     "start_time": "2021-10-15T17:15:19.706285Z"
+     "end_time": "2021-10-15T18:42:17.690648Z",
+     "start_time": "2021-10-15T18:42:17.445314Z"
     }
    },
    "outputs": [],
@@ -323,33 +324,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2bb03a3c",
+   "execution_count": 14,
+   "id": "d0c3ac92",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:15:20.160287Z",
-     "start_time": "2021-10-15T17:15:20.153521Z"
+     "end_time": "2021-10-15T18:42:17.981255Z",
+     "start_time": "2021-10-15T18:42:17.694308Z"
     }
    },
    "outputs": [],
    "source": [
-    "def run(action,env:gym.envs,history:ReplayMemory):\n",
+    "def run(action,env:gym.envs,history:ReplayMemory,df):\n",
     "    s, reward, done, info = env.step([action//64, action%64])\n",
+    "    \n",
+    "    df = df.append({\n",
+    "        'UE':action//64,\n",
+    "        'Beam':action%64,\n",
+    "        'Reward':reward\n",
+    "    },ignore_index=True)\n",
+    "    \n",
     "    # print(type(s), s.shape)\n",
     "    history.push(s.astype(np.float))\n",
     "    \n",
-    "    return [np.array(history.sample(BATCH_SIZE)), reward, done, done, reward]"
+    "    return [np.array(history.sample(BATCH_SIZE)), reward, done, done, reward,df]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ffdca3af",
+   "execution_count": 15,
+   "id": "ea294ecb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-15T17:17:32.927841Z",
-     "start_time": "2021-10-15T17:17:32.862422Z"
-    }
+     "end_time": "2021-10-15T18:42:18.226631Z",
+     "start_time": "2021-10-15T18:42:17.984357Z"
+    },
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -370,11 +379,14 @@
     "        states = np.zeros([1, BATCH_SIZE, 1,STATES_USED])\n",
     "        \n",
     "        ovr_val = 0\n",
+    "        csv_pd = list()\n",
     "        for episode in tqdm.notebook.tqdm(range(epi_val[1]-epi_val[0]+1),desc='Val'):\n",
+    "            epi_pd = pd.DataFrame(columns=['UE','Beam','Reward'])\n",
+    "            \n",
     "            if len(gym_env_ind) == 0:\n",
     "                env =  BeamSelectionEnv([episode,episode])\n",
     "            else:\n",
-    "                env = copy.deepcopy(gym_env_ind[episode])\n",
+    "                env = (gym_env_ind[episode])\n",
     "                \n",
     "            rall=0\n",
     "            for steps in range(n_steps_epi_val[episode]):\n",
@@ -387,7 +399,7 @@
     "                    [], [], []\n",
     "                \n",
     "                for action in actions:\n",
-    "                    s, r, d, rd, lr = run(action,env,history)\n",
+    "                    s, r, d, rd, lr,epi_pd = run(action,env,history,epi_pd)\n",
     "                    rall += r\n",
     "                    next_states.append(s)\n",
     "                \n",
@@ -396,37 +408,101 @@
     "                \n",
     "            print(f'Running avg for episode {epi_val[0]+episode} is {rall/steps}')\n",
     "            ovr_val +=rall\n",
+    "            csv_pd.append(epi_pd)\n",
     "        \n",
-    "        print(f'Overall mean reward is {ovr_val/n_steps_val} ')"
+    "        print(f'Overall mean reward is {ovr_val/n_steps_val} ')\n",
+    "        return csv_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8bae05fa",
+   "execution_count": 16,
+   "id": "05b2ba58",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-10-15T17:17:44.584Z"
+     "end_time": "2021-10-15T18:50:14.373527Z",
+     "start_time": "2021-10-15T18:42:18.230293Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f75f2a793dc447da712feab09e8866d",
+       "model_id": "e9efb48eb5814642b3854f57cd35afb5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Val:   0%|          | 0/1 [00:00<?, ?it/s]"
+       "Val:   0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running avg for episode 500 is -0.1411112611270135\n",
+      "Running avg for episode 501 is -0.1761471468740525\n",
+      "Running avg for episode 502 is -0.1503640912378339\n",
+      "Running avg for episode 503 is -0.15393024553394868\n",
+      "Running avg for episode 504 is -0.14676127333914663\n",
+      "Running avg for episode 505 is -0.17192274101291485\n",
+      "Running avg for episode 506 is -0.1426154395151532\n",
+      "Running avg for episode 507 is -0.14492012816123556\n",
+      "Running avg for episode 508 is -0.16391595449056262\n",
+      "Running avg for episode 509 is -0.14430467986662124\n",
+      "Overall mean reward is -0.15302723135354662 \n"
+     ]
     }
    ],
    "source": [
-    "val(epi_val,gym_env_ind_val)"
+    "csv_pd = val(epi_val,gym_env_ind_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a9c78c04",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-15T18:56:35.903341Z",
+     "start_time": "2021-10-15T18:56:35.385515Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.makedirs('./eval',exist_ok=True)\n",
+    "for i in range(len(n_steps_epi_val)):\n",
+    "    csv_pd[i].to_csv(f'./eval/{i}.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "906758e0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-15T18:58:16.189361Z",
+     "start_time": "2021-10-15T18:58:16.179411Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7326"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(csv_pd[0])"
    ]
   }
  ],
@@ -448,6 +524,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.6.13"
   },
+  "notify_time": "0",
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
